# whype

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_whype.bat  flow.py  install.bat  install_vllm.bat  pyproject.toml  start_vllm.bat  start_whype.bat
WhypeIOS/: Package.swift  README.md
WhypeIOS/Sources/Whype/: AICleanupService.swift  AudioRecorder.swift  Config.swift  ContentView.swift  Info.plist  SettingsView.swift  TranscriptionService.swift  WhypeApp.swift
