[project]
name = "whype"
version = "0.2.0"
description = "Whype (Whisper to Type) — voice dictation for Windows — local Whisper + local vLLM"
requires-python = ">=3.10,<3.13"

dependencies = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    # AI cleanup calls local vLLM via stdlib urllib — no extra HTTP client needed.
    # torch is installed separately by install.bat (requires --index-url for CUDA).
]
